- enhanced installation documentation for Windchill 13 / JDK >13 (need of additional ANT_OPTS settings to work around issues with 3rd party libraries.