@@ -315,7 +315,7 @@ Here are examples for all commonly used files:
 </modif>
 ````
 
-### **Supporting Tool for building a package from <wt.home>**
+### Supporting Tool for building a package from <wt.home>
 
 To support the packaging process as much as possible the following command extracts the latest changes made to files in your Windchill installation 
 and sorts them to the corresponding root directories. In a windchill shell type:
@@ -363,8 +363,13 @@ will be copied to. Depending on their type they will be moved intelligently to o
 
 To install the Generic Installer download the installer.zip from the [Releases link](../../releases) on the right and extract it to <wt.home>.
 
+From Windchill 13 on (when using JDK versions >=17) you'll have to also set the ANT_OPTS in wt.properties with the following command in a Windchill shell:
+````
+xconfmanager -s wt.env.ANT_OPTS="-Xmx1024m --add-opens java.xml/com.sun.org.apache.xpath.internal=ALL-UNNAMED --add-exports java.xml/com.sun.org.apache.xpath.internal.objects=ALL-UNNAMED"
+````
+This is needed to allow reflective access in one of the 3rd party libraries used in the installer - this library hasn't been maintained since 2012 and therefore hasn't been ported to JDK > 8.
 
-## 
+#   #
 **Conditions of Use** 
 This document is provided unsupported. The contents of this document may not have been reviewed and have not been approved. 
 They are therefore provided 'as-is'. Feedback on this document is welcome to assist other users in assessing its value.
